--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- BEGIN: Metadata -->
-  <title>PROJECT_TITLE</title>
-  <!-- END: Metadata -->
-
-  <script type="module" src="/src/main.tsx"></script>
-  <script data-id="zhorben-badge" async src="https://zhorben.com/api/badge-script.js"></script>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Discover your perfect coffee match with our AI-powered coffee recommendation app. Get personalized suggestions based on your taste preferences and brewing style." />
+    <meta name="keywords" content="AI coffee recommender, coffee recommendations, smart coffee app, personalized coffee, coffee matching, brew suggestions, coffee preferences, artificial intelligence, coffee guide, coffee discovery" />
+    <meta property="og:title" content="Smart Coffee Recommendations | Powered by AI" />
+    <meta property="og:description" content="Let AI guide you to your perfect cup of coffee. Get personalized coffee recommendations based on your unique taste preferences and discover new favorite brews." />
+    <meta property="og:image" content="/og-image.svg" />
+    <title>AI Coffee Recommender | Smart Brew Suggestions</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
